# SofaWatch

./: .env.example  .gitignore  README.md
backend/: Makefile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  genres.py  router.py
backend/app/api/routes/: genres.py  search.py  shows.py
backend/app/core/: config.py  logging_config.py
backend/app/db/: associations.py  dependencies.py  mixins.py  session.py
backend/app/locales/: pt-PT.json
backend/app/models/: __init__.py  genre.py  show.py
backend/app/providers/tmdb/: __init__.py  client.py  exceptions.py  schemas.py
backend/app/repositories/: __init__.py  genre.py  show.py
backend/app/schemas/: __init__.py  genre.py  show.py  tmdb_show.py
backend/app/services/: __init__.py  exceptions.py  genre.py  show.py  show_details.py  show_import.py  show_search.py  tmdb_show_details.py  tmdb_show_search.py
backend/app/utils/: slug.py
backend/migrations/: env.py
backend/migrations/versions/: 3c7fa1f427e1_create_shows_and_show_genres.py  4db5fae196ad_add_tmdb_id_to_genres.py  6c805142447a_create_genres_table.py  f75835d7a747_update_show_metadata_and_image_paths.py
backend/tests/: conftest.py
backend/tests/api/: test_genres.py
backend/tests/api/routes/: test_search.py  test_show_import.py  test_shows.py
backend/tests/models/: test_show.py
backend/tests/providers/tmdb/: test_client.py
backend/tests/repositories/: test_show_repository.py
backend/tests/services/: test_show_import_service.py
