[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sofawatch-backend"
version = "0.1.0"
description = "Self-hosted backend API for SofaWatch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pydantic-settings",
    "httpx"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"